[workspace]
resolver = "2"
members = [
    "oblivion",
    "oblivion-codegen",
]

[workspace.dependencies]
oblivion = { path = "oblivion" }
oblivion-codegen = { path = "oblivion-codegen" }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3
strip = true # Remove debug symbols
