[workspace]
resolver = "2"
members = [
    "crates/oblivion",
    "crates/oblivion-codegen",
]

[workspace.dependencies]
oblivion-codegen = { path = "crates/oblivion-codegen", version = "*"}
futures = { version = "0.3" }
proc-macro2 = { version = "1" }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3
strip = true # Remove debug symbols
