[package]
name = "oblivion-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
quote = "1.0"
proc-macro2 = "1"
syn = { version = "2.0", features = ["full"] }

[lib]
bin = "oblivion_codegen"
proc-macro = true
