[package]
name = "oblivion-codegen"
version = "0.3.1"
authors = ["苏向夜 <fu050409@163.com>"]
description = "Oblivion Codegen"
license = "AGPL-3.0"
repository = "https://github.com/noctisynth/oblivion-rust/tree/main/oblivion-codegen"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
proc-macro2 = { workspace = true }
quote = "1"
syn = { version = "2", features = ["full"] }

[lib]
proc-macro = true
