[package]
name = "oblivion"
version = "2.2.1"
authors = ["苏向夜 <fu050409@163.com>"]
description = "A fast, lightweight, and secure end-to-end encryption protocol based on ECDHE"
license = "AGPL-3.0"
repository = "https://github.com/noctisynth/oblivion-rust"
readme = "../../README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Cryptography Algorithms
rand = "0.8"
ring = "0.17"
sha2 = "0.10"
scrypt = "0.11"
hkdf = "0.12"

# Utils
arc-swap = "1.7.1"
oblivion-codegen = { version = "0.3.2", path = "../oblivion-codegen" }
proc-macro2 = { workspace = true }
futures = { workspace = true }
regex = "1"
serde_json = "1"
thiserror = "1"
anyhow = "1.0"
colored = "2.1"
chrono = "0.4"
socket2 = "0.5.7"

# Optional
pyo3 = { version = "0.22", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[lib]
name = "oblivion"

[[bin]]
name = "main"

[features]
bench = []
perf = []
pyo3 = ["dep:pyo3"]
serde = ["dep:serde"]

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "socket"
harness = false

[[bench]]
name = "rand"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "packet"
harness = false

[[bench]]
name = "router"
harness = false
